# aiVedioProducer

./: .gitignore  Makefile  README.md  start-comfy.bat  start-dev.bat
.cursor/: hooks.json
backend/: .env.example  pyproject.toml
backend/src/aivp/: config.py  models.py  paths.py  schemas.py
backend/src/aivp/api/: __init__.py  app.py  deps.py  routes_bible.py  routes_entities.py  routes_health.py  routes_jobs.py  routes_keyframes.py  routes_projects.py  routes_reports.py  routes_shots.py  routes_visual.py
backend/src/aivp/bible/: export_md.py  expression_dims.py  expression_rebuild.py  meta.py  overlay.py
backend/tests/: conftest.py  test_api_bible.py  test_api_jobs.py  test_api_pagination.py  test_api_projects.py  test_api_visual_bootstrap.py  test_api_visual_location_bootstrap.py  test_arcs.py  test_assemble.py  test_bible_meta.py  test_bootstrap.py  test_bootstrap_tuning.py  test_cancel_job.py  test_chapters.py  test_character_looks.py  test_character_sheets.py  test_chunks.py  test_clean.py  test_coerce_extract.py  test_comfy_backend.py  test_config.py  test_description_qa.py  test_enrich.py  test_export.py  test_expression_dims.py  test_extract.py  test_extract_all_failed.py  test_extract_progress.py  test_golden_pipeline.py  test_judge_lock.py  test_keyframes.py  test_llm_fake.py  test_location_bootstrap.py  test_location_bootstrap_tuning.py  test_location_candidates.py  test_location_description_qa.py  test_location_judge.py  test_location_paths.py  test_location_profiles.py  test_location_t2i_stack.py  (+19 more)
backend/tests/fixtures/: sample_chapter.txt
(+130 files in other folders)
